add map, renders, props...

--- a/helloreact/src/App.css
+++ b/helloreact/src/App.css
@@ -1,3 +1,15 @@
+.container-app{
+    min-height: 100vh;
+    background-color: #ddddff;
+
+    display: flex;
+    flex-direction: column;
+
+    flex-wrap: wrap;
+
+}
+
+
 .resultado{
     background-color: deeppink;
 }
