--- a/helloreact/src/components/Imesada.css
+++ b/helloreact/src/components/Imesada.css
@@ -28,3 +28,27 @@
 .imagem-porco{
     width: 32px;
 }
+
+.render-movimentacoes{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 5px;
+
+
+}
+
+.crédito{
+    border-left: 5px solid; 
+    border-color: rgba(0, 128, 0, 0.7);
+    border-radius: 2px;
+    
+    /* box-shadow: 10px 0 5px inset green; */
+    /* box-shadow: -10px 0 5px green; */
+}
+.débito{
+    border-left: 5px solid;
+    border-color: rgba(255, 0, 0, 0.7);
+    border-radius: 2px;
+}
